[Feature #163335068] Create basic layout for admin page with basic forms to add party and office

--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -217,7 +217,7 @@ figure img{
     ========================================
     mobile voters education
     ========================================
-  */
+*/
 
   .voters-parent {
     background-color: rgb(156, 238, 153);
@@ -359,7 +359,7 @@ figure img{
 
 
 @media only screen and (min-width: 1000px) {
-    /* how it works*/
+    /* features how it works*/
 
     .index-links div {
         margin: 20px 16px 0;
