--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -339,6 +339,11 @@ figure img{
     create party
     ========================================
   */
+
+  #createparty {
+    display: none;
+  }
+
   * {
     box-sizing: border-box; 
    }
@@ -428,7 +433,9 @@ figure img{
     create office
     ========================================
   */
-
+  #createoffice {
+    display: none;
+  }
    .wrapper {
     background-color: whitesmoke;
     list-style-type: none;
@@ -463,7 +470,14 @@ figure img{
     all parties 
     ========================================
   */
+  #allparties {
+    display:none;
+  }
+  
+ .active {
+   display: block !important;
 
+ }
   * {
     box-sizing: border-box;
   }
