--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -137,6 +137,16 @@ main {
     margin: 1em auto; 
 }
 
+.hero button {
+  background: rgb(206, 206, 2);
+  padding: 0.5em 1.5em;
+  border-radius: 50px;
+  color: green;
+  text-decoration: none;
+  font-size: 1.375em;
+  font-weight: 700;
+}
+
 .hero a {
     background: rgb(206, 206, 2);
     padding: 1em 3em;
@@ -279,6 +289,18 @@ figure img{
         text-decoration: none;
     }
 
+    #signin {
+      background: gainsboro;
+      padding: 1em 2.5em;
+      border-radius: 50px;
+      color: #055902;
+      text-decoration: none;
+      font-weight: 600;
+      border: 3px solid #FFDb37;
+      border-radius: 30px;
+      margin: 0 5px;
+    }
+
     .highlight {
         border: 3px solid #FFDb37;
         border-radius: 30px;
@@ -327,6 +349,7 @@ figure img{
         margin: 0;
         width: 300px;
     }
+
 
 
     /*
@@ -762,6 +785,462 @@ table {
       cursor: pointer;
     }
   }
+  @media(max-width: 768px) {
+    .modal-content {
+      background-color: #164059;
+      margin: 10% auto 35% auto; /* 5% from the top, 15% from the bottom and centered */
+      border: 2px solid #888;
+      width: 50%; 
+      border-radius: 10px;
+    }
+   
+  }
+
+
+
+/*
+    ========================================
+    Modal responsive
+    ========================================
+  */
+  /* Full-width input fields */
+  #input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1.5px solid #c0c0c0;
+    box-sizing: border-box;
+    border-radius: 5px;
+    
+  }
+  .rightmodalTab {
+  margin-bottom: 15px;
+  }
+  .modalTab {
+  color: rgb(19, 212, 247);
+  }
+  /* Set a style for all buttons */
+  #button {
+    background-color:  #679E02;
+    color: white;
+    padding: 10px 16px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  
+  #button:hover {
+    opacity: 0.8;
+  }
+  
+  /* Extra styles for the cancel button */
+  .cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+  }
+  
+  /* Center the image and position the close button */
+  .imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+  }
+  
+  img.avatar {
+    width: 40%;
+    border-radius: 50%;
+  }
+  
+  .modal-container {
+    padding: 16px;
+  }
+  
+  span.psw {
+    padding: 10px;
+    margin: 10px;
+    text-align: center
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(2,23,62,0.9); /* Black w/ opacity */
+    padding-top: 60px;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #164059;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 2px solid #888;
+    width: 27%; /* Could be more or less, depending on screen size */
+    border-radius: 10px;
+  }
+  
+  /* The Close Button (x) */
+  .close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: whitesmoke;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: red;
+    cursor: pointer;
+  }
+  
+  /* Add Zoom Animation */
+  .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+  }
+  .signup-div {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    color: #061929;
+  }
+  @-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+  }
+    
+  @keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+  }
+  
+  /* Change styles for span and cancel button on extra small screens */
+  @media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+  }
+  @media(max-width: 500px) {
+   
+    .rightmodalTab {
+    margin-bottom: 15px;
+    }
+    .modalTab {
+    color: rgb(19, 212, 247);
+    }
+    /* Set a style for all buttons */
+    #button {
+      background-color:  #679E02;
+      color: white;
+      padding: 10px 16px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      border-radius: 5px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    
+    #button:hover {
+      opacity: 0.8;
+    }
+    
+    /* Extra styles for the cancel button */
+    .cancelbtn {
+      width: auto;
+      padding: 10px 18px;
+      background-color: #f44336;
+    }
+    
+    /* Center the image and position the close button */
+    .imgcontainer {
+      text-align: center;
+      margin: 24px 0 12px 0;
+      position: relative;
+    }
+    
+    img.avatar {
+      width: 40%;
+      border-radius: 50%;
+    }
+    
+    .modal-container {
+      padding: 16px;
+    }
+    
+    span.psw {
+      padding: 10px;
+      margin: 10px;
+      text-align: center
+    }
+    
+    /* Modal Content/Box */
+    .modal-content {
+      background-color: #164059;
+      margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+      border: 2px solid #888;
+      width: 63%; 
+      border-radius: 10px;
+    }
+    
+    /* The Close Button (x) */
+    .close {
+      position: absolute;
+      right: 15px;
+      top: 0;
+      color: whitesmoke;
+      font-size: 35px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
+  
+  @media(max-width: 768px) {
+    .modal-content {
+      background-color: #164059;
+      margin: 10% auto 35% auto; /* 5% from the top, 15% from the bottom and centered */
+      border: 2px solid #888;
+      width: 50%; 
+      border-radius: 10px;
+    }
+   
+  }
+
+@media only screen and (min-width: 1000px) {
+ /*
+    ========================================
+    Modal
+    ========================================
+  */
+  /* Full-width input fields */
+  #input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1.5px solid #c0c0c0;
+    box-sizing: border-box;
+    border-radius: 5px;
+    
+  }
+  .rightmodalTab {
+  margin-bottom: 15px;
+  }
+  .modalTab {
+  color: rgb(19, 212, 247);
+  }
+  /* Set a style for all buttons */
+  #button {
+    background-color:  #679E02;
+    color: white;
+    padding: 10px 16px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  
+  #button:hover {
+    opacity: 0.8;
+  }
+  
+  /* Extra styles for the cancel button */
+  .cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+  }
+  
+  /* Center the image and position the close button */
+  .imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+  }
+  
+  img.avatar {
+    width: 40%;
+    border-radius: 50%;
+  }
+  
+  .modal-container {
+    padding: 16px;
+  }
+  
+  span.psw {
+    padding: 10px;
+    margin: 10px;
+    text-align: center
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(2,23,62,0.9); /* Black w/ opacity */
+    padding-top: 60px;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #164059;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 2px solid #888;
+    width: 27%; /* Could be more or less, depending on screen size */
+    border-radius: 10px;
+  }
+  
+  /* The Close Button (x) */
+  .close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: whitesmoke;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: red;
+    cursor: pointer;
+  }
+  
+  /* Add Zoom Animation */
+  .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+  }
+  .signup-div {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    color: #061929;
+  }
+  @-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+  }
+    
+  @keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+  }
+  
+  /* Change styles for span and cancel button on extra small screens */
+  @media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+  }
+  @media(max-width: 500px) {
+   
+    .rightmodalTab {
+    margin-bottom: 15px;
+    }
+    .modalTab {
+    color: rgb(19, 212, 247);
+    }
+    /* Set a style for all buttons */
+    #button {
+      background-color:  #679E02;
+      color: white;
+      padding: 10px 16px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      border-radius: 5px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    
+    #button:hover {
+      opacity: 0.8;
+    }
+    
+    /* Extra styles for the cancel button */
+    .cancelbtn {
+      width: auto;
+      padding: 10px 18px;
+      background-color: #f44336;
+    }
+    
+    /* Center the image and position the close button */
+    .imgcontainer {
+      text-align: center;
+      margin: 24px 0 12px 0;
+      position: relative;
+    }
+    
+    img.avatar {
+      width: 40%;
+      border-radius: 50%;
+    }
+    
+    .modal-container {
+      padding: 16px;
+    }
+    
+    span.psw {
+      padding: 10px;
+      margin: 10px;
+      text-align: center
+    }
+    
+    /* Modal Content/Box */
+    .modal-content {
+      background-color: #164059;
+      margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+      border: 2px solid #888;
+      width: 63%; 
+      border-radius: 10px;
+    }
+    
+    /* The Close Button (x) */
+    .close {
+      position: absolute;
+      right: 15px;
+      top: 0;
+      color: whitesmoke;
+      font-size: 35px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
+ 
+}
   @media(max-width: 768px) {
     .modal-content {
       background-color: #164059;
