--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -65,6 +65,7 @@ body {
 }
 header {
     text-align: center;
+    color: #055902;
 }
 
 header .logo {
@@ -73,9 +74,7 @@ header .logo {
     letter-spacing: .5px;
     line-height: 44px;
     padding: 10px 0;
-    text-transform: uppercase;
     text-align: center;
-    color: #055902;
 }
 
 nav {
@@ -94,9 +93,16 @@ nav ul li {
 
 }
 
+header h1 a {
+  font-size: 1.25em;
+  color: #09A603;
+  font-weight: 700;
+  text-decoration: none;
+}
+
 nav ul li a {
-    font-size: 1.25em;
-    color: #055902;
+    font-size: 1.4em;
+    color: #09A603;
     font-weight: 700;
     text-decoration: none;
 }
@@ -158,12 +164,12 @@ main {
 }
 
 a:hover {
-    color: rgba(178, 224, 9, 0.5);
+    color: rgba(77, 250, 8, 0.938);
 }
 
 
 .ads {
-    color: #010A30;
+    color: rgb(87, 82, 82);
 }
 figure {
     text-align: center;
@@ -256,17 +262,6 @@ figure img{
         flex-flow: wrap;
         align-items: center;
     }
-
-    header .logo {
-        font-size: 25px;
-        font-weight: 900;
-        letter-spacing: .5px;
-        line-height: 44px;
-        padding: 10px 0;
-        text-transform: uppercase;
-        text-align: center;
-        color: #09A603;
-    }
     
     nav {
         margin: 0;
@@ -284,18 +279,19 @@ figure img{
     
     nav ul li a {
         font-size: 1.2em;
-        color: #055902;
+        color: #09A603;
         font-weight: 700;
         text-decoration: none;
     }
 
-    #signin {
-      background: gainsboro;
+    .signin {
+      background: rgb(223, 230, 223);
+      font-size:12px;
       padding: 1em 2.5em;
       border-radius: 50px;
       color: #055902;
       text-decoration: none;
-      font-weight: 600;
+      font-weight: 700;
       border: 3px solid #FFDb37;
       border-radius: 30px;
       margin: 0 5px;
@@ -386,22 +382,26 @@ figure img{
 
     .index-links div {
         margin: 20px 16px 0;
-        height: 310px;
+        height: 240px;
         background-color: #f2f2f2;
         float: left;
+        margin-bottom: 40px;
+        font-size: 12px;
     }
     .index-links {
         overflow: hidden;
     }
     .index-boxlink {
         width: calc(32% - 20px) !important;
+        border-radius: 15px;
+        box-shadow: 3px 4px #888888
     }
     .process{
       margin: 35px 0 20px 0;
       text-align: center;
       font-size: 30px;
       font-weight: 600;
-      color: rgb(5, 59, 3);
+      color: rgb(12, 158, 7);
     }
     .index-links p {
         margin: 10px;
@@ -415,14 +415,16 @@ figure img{
     .index-links div h2 {
         font-weight: 700;
         font-size: 20px;
-        color: rgb(5, 59, 3);
-        margin-top: 30px;
+        color: rgb(12, 158, 7, 0.7);
+        margin-top: 15px;
         
-
     }
+    .index-links div i {
+      margin-right: 8px;
+      color:rgb(73, 238, 8);
+  }
     .index-links  i {
-        margin: 15px 0 10px 0;
-        color:rgb(73, 238, 8);
+       
     }
 
 
@@ -877,7 +879,7 @@ table {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(2,23,62,0.9); /* Black w/ opacity */
+    background-color: rgba(229, 230, 233, 0.9); /* Black w/ opacity */
     padding-top: 60px;
   }
   
