--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -53,6 +53,7 @@ table {
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: rgb(244, 248, 244);
   
 }
 
@@ -86,9 +87,8 @@ header .logo {
     letter-spacing: .5px;
     line-height: 44px;
     padding: 10px 0;
-    text-transform: uppercase;
     text-align: center;
-    color: #055902;
+    color: #09A603;
 }
 
 nav {
@@ -109,9 +109,16 @@ nav ul li {
 
 nav ul li a {
     font-size: 1.25em;
-    color: #055902;
+    color: #09A603;
     font-weight: 700;
     text-decoration: none;
+}
+
+header h1 a {
+  font-size: 1.25em;
+  color: #09A603;
+  font-weight: 700;
+  text-decoration: none;
 }
 
 .banner {
@@ -220,15 +227,16 @@ figure img{
     
     nav ul li a {
         font-size: 1.2em;
-        color: #055902;
+        color: #09A603;
         font-weight: 700;
         text-decoration: none;
     }
 
     .highlight {
-        border: 3px solid #FFDb37;
+        border: 3px solid: gainsboro;
         border-radius: 30px;
         margin: 0 5px;
+        background-color: #FFDb37
     }
 
     .vote-btn {
@@ -285,7 +293,7 @@ figure img{
   .flex-container {
       display: flex;
       justify-content: space-around;
-      height: 2000px;   
+      height: 700px;   
   }
 
   .panel {
@@ -485,7 +493,7 @@ figure img{
   .wrapper {
     width: 100%;
     max-width: 1000px;
-    margin: 1em auto;
+    margin: 0;
     padding: 1em;
   }
   
@@ -530,7 +538,7 @@ figure img{
         list-style: none;
   }
         .column-heading {
-          background-color: #43BAC0;
+          background-color: #055902;
           color: white;
           padding: 1em;
         }
@@ -621,7 +629,7 @@ figure img{
   footer {
     width: calc(100% - 80px);
     padding: 20px 40px;
-    background-color: #f2f2f2;
+    background-color: white;
     overflow: hidden;
 }
 
