[Feature #163335030] Create candidates page to view all candidates

--- a/UI/css/user.css
+++ b/UI/css/user.css
@@ -284,7 +284,7 @@ figure img{
   .flex-container {
       display: flex;
       justify-content: space-around;
-      height: 1500px;   
+      height: 1600px;   
   }
 
   .panel {
@@ -691,3 +691,94 @@ footer ul li a {
     }
 }
 
+/*
+  ========================================
+  Menu
+  ========================================
+*/
+.food-item {
+  margin: 70px 0 0 0;
+}
+.menu-card-list div {
+  margin: 20px 16px 0;
+  padding-top: 15px;
+  width: calc(100% - 32px);
+  height: 310px;
+  background-color: #f2f2f2;
+  text-align: center;
+  float: left;
+}
+.card {
+      overflow: hidden;
+  }
+ 
+.card img {
+  width: 70%;
+  height: 180px;
+
+}
+.menu-card-list .card-details {
+  margin: 5px 10px;
+  color: #6ACC00;
+  font-weight: 500;
+  font-size: 16px;
+}
+.menu-card-list .card-details #price {
+  color: rgb(51, 34, 10);
+  font-weight: 900;
+  font-size: 18px;
+}
+.menu-card-list .card-details button {
+  font-size: 0.9em;
+  margin: 10px 0;
+  border: 0;
+  background: #F5900E;
+  color: whitesmoke;
+  border-radius: 50px;
+  padding: 5px 8px ;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 1000px) {
+  .wrapper-menu {
+      width: 1000px;
+      margin: 0 auto;
+  }
+  .food-item {
+    margin: 70px 0 0 0;
+  }
+  .menu-card-list div {
+      margin: 20px 5px 0;
+      height: 310px;
+      width: calc(100% - 32px);
+      background-color: #f2f2f2;
+      float: left;
+  }
+  .menu-card-list {
+      overflow: hidden;
+  }
+  .card {
+      width: calc(20% - 10px) !important;
+  }
+  .card img {
+    width: 100%;
+    height: 180px;
+  
+  }
+ 
+  .menu-card-list .card-details #price {
+    color: rgb(51, 34, 10);
+    font-weight: 900;
+    font-size: 18px;
+  }
+  .menu-card-list .card-details button {
+    font-size: 0.9em;
+    margin: 10px 0;
+    border: 0;
+    background: rgb(43, 25, 2);
+    color: whitesmoke;
+    border-radius: 50px;
+    padding: 5px 8px ;
+    cursor: pointer;
+  }
+}
