[Feature #163545933] Implemente feedback on templates index page

--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -233,7 +233,7 @@ figure img{
     }
 
     .highlight {
-        border: 3px solid: gainsboro;
+        border: 3px solid gainsboro;
         border-radius: 30px;
         margin: 0 5px;
         background-color: #FFDb37
