--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -411,11 +411,11 @@ body {
           margin: 1em 0; 
       }
       .hero a {
-          background: rgb(206, 206, 2);
+          background: rgb(206, 169, 2);
       }
   
       a:hover {
-        color: rgba(248, 232, 14, 0.938);
+        color: rgba(243, 230, 41, 0.938);
       }
       
       figure {
@@ -517,11 +517,20 @@ body {
 
    #title {
        text-align: center;
-       background-color: rgb(140, 207, 138);
+       background-color: #ceebcd;
        font-size: 20px;
        height: 50px;
        padding: 20px 10px;
-       color: rgb(148, 122, 122);
+   } 
+
+   .title {
+   
+   }
+
+   #admin-operations {
+     text-align: center;
+     font-size: 20px;
+     color: rgba(56, 56, 9, 0.486);
    }
    .myForm {
      display: flex;
