--- a/UI/css/user.css
+++ b/UI/css/user.css
@@ -53,6 +53,7 @@ table {
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: white;
   
 }
 
@@ -69,234 +70,178 @@ body {
 }
 
 /*
-  ========================================
-   mobile header 
-  ========================================
-*/
- 
-header {
-    text-align: center;
-}
-
-header .logo {
-    font-size: 25px;
-    font-weight: 900;
-    letter-spacing: .5px;
-    line-height: 44px;
-    padding: 10px 0;
-    text-transform: uppercase;
-    text-align: center;
-    color: #055902;
-}
-
-nav {
-    margin: 2em auto 0;
-    max-width: 600px;
-}
-nav ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-nav ul li {
-    list-style: none;
-
-}
-
-nav ul li a {
-    font-size: 1.25em;
-    color: #055902;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-.banner {
-    color: #09A603;
-    background-color: #032E2C
-}
-main {
-    display: flex;
-    flex-flow: column;
-    
-}
-
-.hero {
-   text-align: center;
-}
-
-
-.hero h1 {
-    font-size: 2.5em;
-    font-weight: 700;
-}
-
-.hero p {
-    font-size: 1.2em;
-    font-weight: 600;
-    max-width: 500px;
-    line-height: 1.8em;
-    margin: 3em auto;
-}
-
-.hero p:before {
-    content: "";
-    display: block;
-    width: 120px;
-    border: 2px solid #FFDB37;
-    margin: 1em auto; 
-}
-
-.hero a {
-    background: rgb(206, 206, 2);
-    padding: 1em 3em;
-    border-radius: 50px;
-    color: green;
-    text-decoration: none;
-    font-size: 1.375em;
-    font-weight: 700;
-}
-
-a:hover {
-    color: rgba(178, 224, 9, 0.5);
-}
-
-
-.ads {
-    color: #010A30;
-}
-figure {
-    text-align: center;
-}
-
-figure img{
-    margin: 3em auto 0;
-    width: 300px;
-}
-
-
-    /*
     ========================================
-    large screen header 
+    header
     ========================================
   */
- 
+  .top {
+    background-color: #09A603;
+    
+  }
+  .menu {
+    overflow: hidden;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+  }
+  
+  header {
+      text-align: center;
+      color: rgba(248, 232, 14, 0.938); 
+      margin: 0 auto; 
+  }
+  
+  header .logo {
+      font-size: 25px;
+      font-weight: 900;
+      letter-spacing: .5px;
+      line-height: 44px;
+      padding: 10px 0;
+      text-align: center;
+  }
+  
+  nav {
+      margin: 2em auto 0;
+      max-width: 600px;
+      font-size: 12px;
+  }
+  nav ul {
+      margin: 0 30px;
+      padding: 0;
+      display: flex;
+      justify-content: space-between;
+  }
+  
+  nav ul li {
+      list-style: none;
+      padding: 0 2px;
+  
+  }
+  
+  
+  header h1 a {
+    font-size: 1em;
+    color: rgb(240, 240, 240);
+    font-weight: 300;
+    text-decoration: none;
+  }
+  
+  nav ul li a {
+      font-size: 1.4em;
+      color: rgb(210, 214, 210);
+      font-weight: 700;
+      text-decoration: none;
+  }
 
-@media screen and (min-width: 820px) {
-    header {
-        display: flex;
-        justify-content: space-between;
-        flex-flow: wrap;
-        align-items: center;
-    }
+  .signin {
+    background: rgb(223, 230, 223);
+    font-size:14px;
+    border-radius: 50px;
+    color: #055902;
+    text-decoration: none;
+    font-weight: 700;
+    border: 3px solid rgb(173, 236, 186);
+    border-radius: 30px;
+    margin: 0 5px;
+  }
+  
+  .highlight {
+      border: 1px solid #FFDb37;
+      border-radius: 8px;
+      margin: 0 2px;
+  }
 
-    header .logo {
-        font-size: 25px;
-        font-weight: 400;
-        letter-spacing: .5px;
-        line-height: 44px;
-        padding: 5px 0;
-        text-transform: uppercase;
-        text-align: center;
-        color: #09A603;
-    }
-    
-    nav {
-        margin: 0;
-    }
-    nav ul {
-        margin: 0;
-        padding: 0;
-        display: flex;
-    }
-    
-    nav ul li {
-        list-style: none;
-        padding: 0.5em 2em;
-    }
-    
-    nav ul li a {
-        font-size: 1.2em;
-        color: #055902;
-        font-weight: 700;
-        text-decoration: none;
-    }
+  .main {
+    margin-top: 100px;
+    margin-bottom: 120px;
+  }
 
-    .highlight {
-        border: 3px solid #FFDb37;
-        border-radius: 30px;
-        margin: 0 5px;
-    }
-
-    .vote-btn {
-        background-color: rgb(206, 206, 2);
-    }
-    
-    main {
-        display: flex;
-        flex-flow: column;
-        margin-top: 0;
-    }
-    
-    .hero {
-       text-align: left;
-    }
-
-    .hero h1 {
-        font-size: 4em;
-    }
-    
-    .hero p {
-        font-size: 1.3em;
-        padding: 0;
-        margin: 0 0 3em 0;
-    }
-    
-    .hero p:before {
-        margin: 1em 0; 
-    }
-    .hero a {
-        background: rgb(206, 206, 2);
-    }
-
-    a:hover {
-        color: rgba(178, 224, 9, 0.5);
-    }
-    
-    figure {
-        text-align: center;
-    }
-    
-    .figure img{
-        margin: 0;
-        width: 300px;
-    }
+  a:hover {
+    color: rgba(248, 232, 14, 0.938);
 }
 
+a:active {
+  color: rgba(179, 167, 1, 0.938);
+  font-size: 22px;
+}
+  
+  
+  @media screen and (min-width: 820px) {
+      header {
+          display: flex;
+          justify-content: space-between;
+          flex-flow: wrap;
+          align-items: center;
+          color: #dfe7e5;
+          height: 10px;
+      }
+  
+      .menu {
+        overflow: hidden;
+        position: fixed; /* Set the navbar to fixed position */
+        top: 0; /* Position the navbar at the top of the page */
+        width: 100%; /* Full width */
+      }
+      
+      nav {
+          margin: 0;
+      }
+      nav ul {
+          margin: 0;
+          padding: 0;
+          display: flex;
+      }
+      
+      nav ul li {
+          list-style: none;
+          padding: 0.7em 2em;
+      }
+  
+      header h1 a {
+        color: rgb(240, 240, 240);
+        font-size: 1.5em;
+        font-weight: 500px;
+        
+      }
+      
+      nav ul li a {
+          font-size: 1.5em;
+          color: rgb(210, 214, 210);
+          font-weight: 700;
+          text-decoration: none;
+      }
+  
+      
+      
+      main {
+          display: flex;
+          flex-flow: column;
+      } 
+  }
 
 /*
     ========================================
     main
     ========================================
   */
-
+  .main {
+    margin-top: 60px;
+    margin-bottom: 120px;
+  }
   .flex-container {
       display: flex;
       justify-content: space-around;
-      height: 1600px;   
+      height: 100%;   
   }
 
   .panel {
     flex-grow: 1;
-    background-color: #ceebcd;
-   
+    background-color: #ceebcd; 
   }
 
   .show {
     flex-grow: 12;
     background-color: whitesmoke;
-
   }
 
   .navbar {
@@ -313,23 +258,28 @@ figure img{
 
 .navbar ul li {
     list-style: none;
-    padding: 0.5em 1em 0.5em 2em;
+    padding: 0.2em 1em;
 }
 
 .navbar ul li a {
-    color: #070222;
+    color: #055902;
     font-weight: 500;
     text-decoration: none;
     white-space:nowrap;
 }
 
 .navbar ul li a:hover {
-    color: rgb(83, 69, 7);
+  color: rgb(170, 159, 0);
+}
+
+.navbar ul li a:active {
+color: rgb(65, 61, 13);
+font-size: 22px;
 }
 
 .navbar ul li i {
     margin: 0  10px 0 8px;
-    color: red;
+    color:rgb(68, 68, 32);
 }
 
 
@@ -346,14 +296,6 @@ figure img{
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 100%;
-  background-color: rgb(216, 200, 200);
-}
-
-.profile .card img {
-  width:100%;
-  height: 20%
 }
 
 .card:hover {
@@ -362,6 +304,13 @@ figure img{
 
 .user-container {
   padding: 2px 16px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.user-container h4 {
+  color: rgb(107, 105, 3);
+  font-weight: 300;
 }
 
 .profile {
@@ -370,31 +319,50 @@ figure img{
  
 }
 
-.operation {
- 
-
+.profile .card  img {
+  border-radius: 50px;
 }
+
+
 
 /*
     ========================================
     create party
     ========================================
   */
+  .party-form {
+ 
+  }
+  #createparty {
+    display: none;
+  }
+
   * {
     box-sizing: border-box; 
    }
 
    #title {
        text-align: center;
-       font-size: 18px;
-       background-color: rgb(140, 207, 138);
-       padding: 0 40px;
+       background-color: #ceebcd;
+       font-size: 20px;
+       height: 50px;
+       padding: 20px 10px;
+   } 
 
+   .title {
+   
+   }
+
+   #admin-operations {
+     text-align: center;
+     font-size: 20px;
+     color: rgba(56, 56, 9, 0.486);
    }
    .myForm {
      display: flex;
      background-color: white;
      padding: 0.5em 2.5em 1.8em 10em;
+    
    }
    .party {
         flex: 1; 
@@ -469,7 +437,9 @@ figure img{
     create office
     ========================================
   */
-
+  #createoffice {
+    display: none;
+  }
    .wrapper {
     background-color: whitesmoke;
     list-style-type: none;
@@ -504,7 +474,14 @@ figure img{
     all parties 
     ========================================
   */
+  #allparties {
+    display:none;
+  }
+  
+ .active {
+   display: block !important;
 
+ }
   * {
     box-sizing: border-box;
   }
@@ -512,21 +489,21 @@ figure img{
   .wrapper {
     width: 100%;
     max-width: 1000px;
-    margin: 1em auto;
+    margin: 0;
     padding: 1em;
   }
   
   .is-striped { 
-    background-color: rgba(233,200,147,0.2) 
+    background-color: rgb(199, 243, 198) 
   }
   
   
   /* Table column sizing
   ================================== */
   .date-cell  { 
-    width: 20%; 
+    width: 25%; 
   }
-  .topic-cell  { width: 41%; }
+  .topic-cell  { width: 36%; }
   .access-link-cell  { width: 13%; }
   .replay-link-cell  { width: 13%; }
   .pdf-cell  { width: 13%; }
@@ -557,7 +534,7 @@ figure img{
         list-style: none;
   }
         .column-heading {
-          background-color: #43BAC0;
+          background-color: #09A603;
           color: white;
           padding: 1em;
         }
@@ -575,6 +552,13 @@ figure img{
             font-weight: 700;
           }
   
+          #edit {
+            color: rgba(85, 85, 5, 0.555);
+          }
+
+          #delete {
+            color: red;
+          }
   /* Responsive
   ==================================== */
   @media all and (max-width: 750px) {
@@ -637,8 +621,12 @@ figure img{
     .Rtable-cell {
       width: 100%;
     }
-
+    
+    #istyle {
+      font-size: 1px;
+    }
 }
+
 /*
     ========================================
     Footer
@@ -648,8 +636,12 @@ figure img{
   footer {
     width: calc(100% - 80px);
     padding: 20px 40px;
-    background-color: #f2f2f2;
-    overflow: hidden;
+    background-color: #09A603;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
 
 footer ul {
@@ -665,13 +657,13 @@ footer ul li {
 
 footer ul li a {
     font-size: 16px;
-    color: #055902;
+    color: rgb(240, 240, 240);
     line-height: 30px;
 }
 
 @media only screen and (min-width: 1000px) {
     .footer {
-        color: #055902;
+        color: #09A603;
         font-size: 14px;
         padding: 20px 0;
         
@@ -689,96 +681,20 @@ footer ul li a {
         display: inline-block;
         margin: 10px;
     }
+
+    footer ul li a {
+      font-size: 16px;
+      color: rgb(240, 240, 240);
+      line-height: 30px;
+  }
 }
+
 
 /*
-  ========================================
-  Menu
-  ========================================
-*/
-.food-item {
-  margin: 70px 0 0 0;
-}
-.menu-card-list div {
-  margin: 20px 16px 0;
-  padding-top: 15px;
-  width: calc(100% - 32px);
-  height: 310px;
-  background-color: #f2f2f2;
-  text-align: center;
-  float: left;
-}
-.card {
-      overflow: hidden;
-  }
- 
-.card img {
-  width: 70%;
-  height: 180px;
+    ========================================
+    cards for office to vote
+    ========================================
+  */
 
-}
-.menu-card-list .card-details {
-  margin: 5px 10px;
-  color: #6ACC00;
-  font-weight: 500;
-  font-size: 16px;
-}
-.menu-card-list .card-details #price {
-  color: rgb(51, 34, 10);
-  font-weight: 900;
-  font-size: 18px;
-}
-.menu-card-list .card-details button {
-  font-size: 0.9em;
-  margin: 10px 0;
-  border: 0;
-  background: #F5900E;
-  color: whitesmoke;
-  border-radius: 50px;
-  padding: 5px 8px ;
-  cursor: pointer;
-}
 
-@media only screen and (min-width: 1000px) {
-  .wrapper-menu {
-      width: 1000px;
-      margin: 0 auto;
-  }
-  .food-item {
-    margin: 70px 0 0 0;
-  }
-  .menu-card-list div {
-      margin: 20px 5px 0;
-      height: 310px;
-      width: calc(100% - 32px);
-      background-color: #f2f2f2;
-      float: left;
-  }
-  .menu-card-list {
-      overflow: hidden;
-  }
-  .card {
-      width: calc(20% - 10px) !important;
-  }
-  .card img {
-    width: 100%;
-    height: 180px;
   
-  }
- 
-  .menu-card-list .card-details #price {
-    color: rgb(51, 34, 10);
-    font-weight: 900;
-    font-size: 18px;
-  }
-  .menu-card-list .card-details button {
-    font-size: 0.9em;
-    margin: 10px 0;
-    border: 0;
-    background: rgb(43, 25, 2);
-    color: whitesmoke;
-    border-radius: 50px;
-    padding: 5px 8px ;
-    cursor: pointer;
-  }
-}
