--- a/UI/css/user.css
+++ b/UI/css/user.css
@@ -327,6 +327,133 @@ font-size: 22px;
 
 /*
     ========================================
+    mobile size for small screens
+    ========================================
+  */
+
+@media screen and (max-width: 420px) {
+
+/*
+    ========================================
+    main
+    ========================================
+  */
+  .main {
+    margin-top: 180px;
+    margin-bottom: 100px;
+  }
+  .flex-container {
+      display: flex;
+      justify-content: space-around;
+      height: 100%;  
+      flex-wrap: wrap; 
+  }
+
+  .panel {
+    background-color: #ceebcd; 
+    height: 500px;
+  }
+
+  .show {
+    background-color: whitesmoke;
+  }
+
+  .navbar {
+      font-weight: 700;
+      margin: 20px 5px;
+      color: black;
+      font-size: 18px;
+  }
+
+.navbar li {
+    margin: 10px 10px 0 0;
+    border-radius: 50px;   
+}
+
+.navbar ul li {
+    list-style: none;
+    padding: 0.2em 1em;
+}
+
+.navbar ul li a {
+    color: #055902;
+    font-weight: 500;
+    text-decoration: none;
+    white-space:nowrap;
+}
+
+.navbar ul li a:hover {
+  color: rgb(170, 159, 0);
+}
+
+.navbar ul li a:active {
+color: rgb(65, 61, 13);
+}
+
+.navbar ul li i {
+    margin: 0  10px 0 8px;
+    color:rgb(68, 68, 32);
+}
+
+
+/*
+    ========================================
+    user profile
+    ========================================
+  */
+
+  .flex-user {
+    display: flex;
+    flex-direction: column;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.user-container {
+  padding: 2px 16px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.user-container h4 {
+  color: rgb(107, 105, 3);
+  font-weight: 300;
+}
+
+.profile {
+  background-color: #ceebcd;
+  height: 200px;
+ 
+}
+
+.profile .card  img {
+  border-radius: 50px;
+}
+
+}
+
+@media screen and (max-width: 768px) {
+
+  /*
+    ========================================
+    main
+    ========================================
+  */
+  .main {
+
+    margin: 180px 50px 10px 0;
+  }
+}
+
+
+/*
+    ========================================
     create party
     ========================================
   */
@@ -690,11 +817,4 @@ footer ul li a {
 }
 
 
-/*
-    ========================================
-    cards for office to vote
-    ========================================
-  */
 
-
-  
