--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -627,7 +627,7 @@ font-size: 22px;
             flex: 1;
             max-width: 120px;
             min-width: 120px;
-            color: #43BAC0;
+            color: #09A603;
             font-weight: 700;
             border-right: 1px solid #ccc;
             margin-right: 1em;
@@ -639,7 +639,7 @@ font-size: 22px;
           }
       
       .topic-cell {
-        background-color: #43BAC0;
+        background-color: #09A603;
         color: white;
         font-weight: 700;
         order: -1;
