--- a/UI/css/user.css
+++ b/UI/css/user.css
@@ -173,9 +173,12 @@ a:active {
           flex-flow: wrap;
           align-items: center;
           color: #dfe7e5;
-          height: 10px;
+          height: 70px;
       }
-  
+      .top {
+        background-color: #09A603;
+        height: 100px;
+      }
       .menu {
         overflow: hidden;
         position: fixed; /* Set the navbar to fixed position */
@@ -217,6 +220,10 @@ a:active {
           display: flex;
           flex-flow: column;
       } 
+      .top {
+        background-color: #09A603;
+        height: 110px;
+      }
   }
 
 /*
@@ -225,7 +232,7 @@ a:active {
     ========================================
   */
   .main {
-    margin-top: 60px;
+    margin-top: 100px;
     margin-bottom: 120px;
   }
   .flex-container {
@@ -769,6 +776,7 @@ color: rgb(65, 61, 13);
     bottom: 0;
     width: 100%;
     text-align: center;
+    margin: 70px 0 0 0;
 }
 
 footer ul {
